--- a/style.css
+++ b/style.css
@@ -1,16 +1,11 @@
 h1 {
   margin: 0;
   padding: 20px 0;
-  color: #606c38;
+  color: #7f5539;
 }
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #dad7cd;
+  background-color: #ffb4a2;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
-}
-img {
-  display: block;
-  margin: 0 auto;
-}
